--- a/calc2.html
+++ b/calc2.html
@@ -245,8 +245,7 @@
                 </td>
                 <td>Hit数</td>
                 <td>
-                    <input type="text" id="txtNHits" size=10px />
-                    <input type="button" value="全鞭尸" id="btnAdjOverkill" />
+                    <input type="text" id="txtNHits" />
                 </td>
 	    </tr>
             <tr>
@@ -447,6 +446,7 @@
                         <option value=0>输入鞭尸数</option>
                         <option value=1>输入血量</option>
                     </select>
+                    <input type="button" value="全鞭尸" id="btnAdjOverkill" />
 		</td>
                 <td>
                     <span id="spanOverkillLabel1">敌人1鞭尸</span>
