--- a/calc2.html
+++ b/calc2.html
@@ -168,11 +168,11 @@
                 <td>OC等级</td>
                 <td>
                     <select id="ddlOvercharge" oldvalue = "oc1">
-                        <option value="oc1">1</option>
-                        <option value="oc2">2</option>
-                        <option value="oc3">3</option>
-                        <option value="oc4">4</option>
-                        <option value="oc5">5</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
                     </select>
                 </td>
                 <td>目标数</td>
