--- a/calc2.html
+++ b/calc2.html
@@ -75,7 +75,7 @@
                 <td>等级</td>
                 <td>
                     <select id="ddlLvs" oldvalue=0>
-                        <option value=-1>默认</option>
+                        <option value=-1>满级</option>
                         <option value=100>Lv.100</option>
                         <option value=90>Lv.90</option>
                         <option value=80>Lv.80</option>
