--- a/calc2.html
+++ b/calc2.html
@@ -160,6 +160,7 @@
                         <option value=3>4</option>
                         <option value=4>5</option>
                     </select>
+		    <input type="button" value="计算" id="btnCalculate2" onclick="calc()" />
                 </td>
                 <td>宝具倍率(%)</td>
                 <td>
