--- a/calc2.html
+++ b/calc2.html
@@ -530,7 +530,7 @@
                 </td>
                 <td>宝具特攻(%)</td>
                 <td>
-                    <input type="text" id="txtNpSpecialAttack" value="100" />
+                    <input type="text" id="txtNpSpecialAttack" value="100" basevalue="100" />
                 </td>
                 <td>固定伤害Buff</td>
                 <td>
